--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             </div>
         </form>
 
-        <h2>Resultado</h2>
-
-        <table class="resultado">
+        <div class="resultado">
+            <h2>Resultado:</h2>
+            <table>
                 <tr>
                     <th>Eventos</th>
                     <th>Alíquota</th>
@@ -35,28 +35,28 @@
                     <th>Descontos</th>
                 </tr>
                 <tr>
-                    <th>Salário bruto</th>
-                    <th>-</th>
-                    <th>-</th>
-                    <th>-</th>
+                    <td>Salário bruto</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
                 </tr>
                 <tr>
-                    <th>Outros</th>
-                    <th>-</th>
-                    <th>-</th>
-                    <th>-</th>
+                    <td>Outros</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
                 </tr>
                 <tr>
-                    <th>INSS</th>
-                    <th>-</th>
-                    <th>-</th>
-                    <th>-</th>
+                    <td>INSS</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
                 </tr>
                 <tr>
-                    <th>IRRF</th>
-                    <th>-</th>
-                    <th>-</th>
-                    <th>-</th>
+                    <td>IRRF</td>
+                    <td>-</td>
+                    <td>-</td>
+                    <td>-</td>
                 </tr>
                 <tr>
                     <th colspan="2">Totais</th>
@@ -67,7 +67,8 @@
                     <th colspan="2">Valor salário líquido</th>
                     <th colspan="2">-</th>
                 </tr>
-        </table>
+            </table>
+        </div>
         
     </main>
 </body>
