--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                     <td>-</td>
                 </tr>
                 <tr>
-                    <th colspan="2">Totais</th>
-                    <th>-</th>
-                    <th>-</th>
+                    <td colspan="2">Totais</td>
+                    <td>-</td>
+                    <td>-</td>
                 </tr>
                 <tr>
-                    <th colspan="2">Valor salário líquido</th>
-                    <th colspan="2">-</th>
+                    <td colspan="2">Valor salário líquido</td>
+                    <td colspan="2">-</td>
                 </tr>
             </table>
         </div>
