--- a/index.html
+++ b/index.html
@@ -25,47 +25,48 @@
             </div>
         </form>
 
-        <div class="resultado">
+        
+        <div>
             <h2>Resultado:</h2>
             <table>
                 <tr>
-                    <th>Eventos</th>
-                    <th>Alíquota</th>
-                    <th>Proventos</th>
-                    <th>Descontos</th>
+                    <th class="cima_esquerda">Eventos</th>
+                    <th class="tab_bord">Alíquota</th>
+                    <th class="tab_bord">Proventos</th>
+                    <th class="cima_direita ">Descontos</th>
                 </tr>
                 <tr>
-                    <td>Salário bruto</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
+                    <td class="tab_bord">Salário bruto</td>
+                    <td class="tab_bord">-</td>
+                    <td class="tab_bord">-</td>
+                    <td class="tab_bord">-</td>
                 </tr>
                 <tr>
-                    <td>Outros</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
+                    <td class="tab_bord">Outros</td>
+                    <td class="tab_bord">-</td>
+                    <td class="tab_bord">-</td>
+                    <td class="tab_bord">-</td>
                 </tr>
                 <tr>
-                    <td>INSS</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
+                    <td class="tab_bord">INSS</td>
+                    <td class="tab_bord">-</td>
+                    <td class="tab_bord">-</td>
+                    <td class="tab_bord">-</td>
                 </tr>
                 <tr>
-                    <td>IRRF</td>
-                    <td>-</td>
-                    <td>-</td>
-                    <td>-</td>
+                    <td class="tab_bord">IRRF</td>
+                    <td class="tab_bord">-</td>
+                    <td class="tab_bord">-</td>
+                    <td class="tab_bord">-</td>
                 </tr>
                 <tr>
-                    <td colspan="2">Totais</td>
-                    <td>-</td>
-                    <td>-</td>
+                    <td colspan="2" class="tab_bord">Totais</td>
+                    <td class="tab_bord">-</td>
+                    <td class="tab_bord">-</td>
                 </tr>
                 <tr>
-                    <td colspan="2">Valor salário líquido</td>
-                    <td colspan="2">-</td>
+                    <td colspan="2" class="baixo_esquerda">Valor salário líquido</td>
+                    <td colspan="2" class="baixo_direita class="tab_bord"">-</td>
                 </tr>
             </table>
         </div>
