--- a/index.html
+++ b/index.html
@@ -26,48 +26,54 @@
         </form>
 
         
-        <div>
+        <div class="resultado">
             <h2>Resultado:</h2>
             <table>
-                <tr>
-                    <th class="cima_esquerda">Eventos</th>
-                    <th class="tab_bord">Alíquota</th>
-                    <th class="tab_bord">Proventos</th>
-                    <th class="cima_direita ">Descontos</th>
-                </tr>
-                <tr>
-                    <td class="tab_bord">Salário bruto</td>
-                    <td class="tab_bord">-</td>
-                    <td class="tab_bord">-</td>
-                    <td class="tab_bord">-</td>
-                </tr>
-                <tr>
-                    <td class="tab_bord">Outros</td>
-                    <td class="tab_bord">-</td>
-                    <td class="tab_bord">-</td>
-                    <td class="tab_bord">-</td>
-                </tr>
-                <tr>
-                    <td class="tab_bord">INSS</td>
-                    <td class="tab_bord">-</td>
-                    <td class="tab_bord">-</td>
-                    <td class="tab_bord">-</td>
-                </tr>
-                <tr>
-                    <td class="tab_bord">IRRF</td>
-                    <td class="tab_bord">-</td>
-                    <td class="tab_bord">-</td>
-                    <td class="tab_bord">-</td>
-                </tr>
-                <tr>
-                    <td colspan="2" class="tab_bord">Totais</td>
-                    <td class="tab_bord">-</td>
-                    <td class="tab_bord">-</td>
-                </tr>
-                <tr>
-                    <td colspan="2" class="baixo_esquerda">Valor salário líquido</td>
-                    <td colspan="2" class="baixo_direita class="tab_bord"">-</td>
-                </tr>
+                <thead>
+                    <tr>
+                        <th>Eventos</th>
+                        <th>Alíquota</th>
+                        <th>Proventos</th>
+                        <th>Descontos</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Salário bruto</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>Outros</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>INSS</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>IRRF</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">Totais</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="2">Valor salário líquido</td>
+                        <td colspan="2">-</td>
+                    </tr>
+                </tfoot>
             </table>
         </div>
         
