vai quadrado mesmo, fodasse

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Eventos</th>
+                        <th class="aa">Eventos</th>
                         <th>Alíquota</th>
                         <th>Proventos</th>
-                        <th>Descontos</th>
+                        <th class="bb">Descontos</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -70,8 +70,8 @@
                 </tbody>
                 <tfoot>
                     <tr>
-                        <td colspan="2">Valor salário líquido</td>
-                        <td colspan="2">-</td>
+                        <td colspan="2" class="cc">Valor salário líquido</td>
+                        <td colspan="2" class="dd">-</td>
                     </tr>
                 </tfoot>
             </table>
