nao aguento mais

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         
         <div class="resultado">
-            
+            <caption><strong>Resultado:</strong></caption>
             <table>
                 <thead>
                     <tr>
