--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </tr>
                     <tr>
                         <td>INSS</td>
-                        <td>-</td>
+                        <td class="al_inss">-</td>
                         <td>-</td>
                         <td class="inss">-</td>
                     </tr>
