parece que agora vai

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
                         <th class="aa">Eventos</th>
                         <th>Alíquota</th>
                         <th>Proventos</th>
-                        <th class="bb">Descontos</th>
+                        <th>Descontos</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>Salário bruto</td>
                         <td>-</td>
-                        <td class="tab_bruto">-</td>
+                        <td id="bruto">-</td>
                         <td>-</td>
                     </tr>
                     <tr>
@@ -64,7 +64,7 @@
                     </tr>
                     <tr>
                         <td colspan="2">Totais</td>
-                        <td class="total">-</td>
+                        <td id="total">-</td>
                         <td>-</td>
                     </tr>
                 </tbody>
