--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <td>Outros</td>
                         <td>-</td>
                         <td>-</td>
-                        <td class="outros">-</td>
+                        <td id="outros">-</td>
                     </tr>
                     <tr>
                         <td>INSS</td>
@@ -65,7 +65,7 @@
                     <tr>
                         <td colspan="2">Totais</td>
                         <td id="total">-</td>
-                        <td>-</td>
+                        <td id="total-descontos">-</td>
                     </tr>
                 </tbody>
                 <tfoot>
