--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 </tbody>
                 <tfoot>
                     <tr>
-                        <td colspan="2">Valor salário líquido</td>
-                        <td colspan="2" id="valor-salario-liquido">-</td>
+                        <td colspan="2" class="liquido">Valor salário líquido</td>
+                        <td colspan="2" class="liquido"id="valor-salario-liquido">-</td>
                     </tr>
                 </tfoot>
             </table>
