--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <h1>Cálculo de salário líquido</h1>
             <p class="informativo">Este cálculo demostra como obter um valor de salário líquido a partir do salário bruto e dos principais descontos do salário. Aliquotas (INSS e IRRF) referentes ao ano de 2023.</p>
             <label for="salario-bruto">Salário Bruto:</label>
-            <input type="text" class="salario_bruto" id="salario-bruto">
+            <input type="text" inputmode="numeric" class="salario_bruto" id="salario-bruto">
             <label for="demais-descontos">Demais Descontos:</label>
-            <input type="text" class="descontos" id="demais-descontos">
+            <input type="text" inputmode="numeric" class="descontos" id="demais-descontos">
             <label for="numero-dependentes">Número de Dependentes:</label>
-            <input type="text" class="dependentes" id="numero-dependentes">
+            <input type="text" inputmode="numeric" class="dependentes" id="numero-dependentes">
             <div class="botoes">
                 <button class="btn_limpar">Limpar</button>
                 <button class="btn_calcular">Calcular</button>
