--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <label for="salario-bruto">Salário Bruto:</label>
             <div class="div_input">
                 <span class="rs">R$ |</span>
-                <input type="text" inputmode="numeric" class="salario_bruto" id="salario-bruto">
+                <input type="text" class="salario_bruto" id="salario-bruto" step="0.01" value="0.00">
             </div>
             <label for="demais-descontos">Demais Descontos:</label>
             <div class="div_input">
                 <span class="rs">R$ |</span>
-                <input type="text" inputmode="numeric" class="descontos" id="demais-descontos">
+                <input type="text" class="descontos" id="demais-descontos" step="0.01" value="0.00">
             </div>
             <label for="numero-dependentes">Número de Dependentes:</label>
             <input type="text" inputmode="numeric" class="dependentes" id="numero-dependentes">
